--- a/src/main/resources/templates/farmer/farmer-gather-writeform.html
+++ b/src/main/resources/templates/farmer/farmer-gather-writeform.html
@@ -139,8 +139,12 @@
                                                                             class="lni lni-chevron-down"></i></span>
                                                                 <select class="user-chosen-select" th:field="*{category}" th:class="${#fields.hasErrors('category')}? 'error'">
                                                                     <option value="0">카테고리를 선택해주세요</option>
-                                                                    <option value="1">과일</option>
-                                                                    <option value="2">채소</option>
+                                                                    <option value="100">식량작물</option>
+                                                                    <option value="200">채소류</option>
+                                                                    <option value="300">특용작물</option>
+                                                                    <option value="400">과일류</option>
+                                                                    <option value="500">축산물</option>
+                                                                    <option value="600">수산물</option>
                                                                 </select>
                                                                 <div th:each="msg : ${#fields.errors('category')}">
                                                                     <p style="color: red" th:text="${msg}"></p>
