design: 모집 게시글 작성시 포인트 확인
- company-gather-write-payment.html
- auction-bidding.html 수정

#64

--- a/src/main/resources/templates/market/auction-bidding.html
+++ b/src/main/resources/templates/market/auction-bidding.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="ko">
+<html xmlns:th="http://www.thymeleaf.org" class="no-js" lang="ko">
 
 <head>
     <meta charset="utf-8"/>
