bug: 'origin' does not appear to be a git repo
-

- #70

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -68,8 +68,8 @@
                             </div>
                             <div class="socila-login">
                                 <ul>
-                                    <li><a href="javascript:void(0)" class="naver"><i class="lni lni-naver-original"></i>네이버계정으로 로그인하기</a></li>
-                                    <li><a href="javascript:void(0)" class="google"><i class="lni lni-google"></i>구글계정으로 로그인하기</a>
+<!--                                    <li><a href="javascript:void(0)" class="naver"><i class="lni lni-naver-original"></i>네이버계정으로 로그인하기</a></li>-->
+                                    <li><a href="/oauth2/authorization/google" class="google"><i class="lni lni-google"></i>구글계정으로 로그인하기</a>
                                     </li>
                                 </ul>
                             </div>
