--- a/src/main/resources/templates/market/company-gather-write-payment.html
+++ b/src/main/resources/templates/market/company-gather-write-payment.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html xmlns:th = "http://www.thymeleaf.org" class="no-js" lang="ko">
+<html xmlns:th="http://www.thymeleaf.org" class="no-js" lang="ko">
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Contact Us - ClassiGrids Classified Ads and Listing Website Template</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/x-icon" th:href="@{assets/images/favicon.svg}" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="x-ua-compatible" content="ie=edge"/>
+    <title>나의 현재 잔여포인트</title>
+    <meta name="description" content=""/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{assets/images/favicon.svg}"/>
     <!-- Place favicon.ico in the root directory -->
 
     <!-- Web Font -->
@@ -18,77 +18,111 @@
     <link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css}">
 
     <!-- ========================= CSS here ========================= -->
-    <link th:href ="@{/awesome/css/bootstrap.min.css}" rel="stylesheet" type="text/css">
-    <link th:href ="@{/awesome/css/LineIcons.2.0.css}" rel="stylesheet" type="text/css">
-    <link th:href ="@{/awesome/css/animate.css}" rel="stylesheet" type="text/css">
-    <link th:href ="@{/awesome/css/tiny-slider.css}" rel="stylesheet" type="text/css">
-    <link th:href ="@{/awesome/css/glightbox.min.css}" rel="stylesheet" type="text/css">
-    <link th:href ="@{/awesome/css/main.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/awesome/css/bootstrap.min.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/awesome/css/LineIcons.2.0.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/awesome/css/animate.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/awesome/css/tiny-slider.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/awesome/css/glightbox.min.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/awesome/css/main.css}" rel="stylesheet" type="text/css">
     <link th:href="@{/awesome/css/apply-bidding-detail.css}" rel="stylesheet" type="text/css">
+
+    <script src="https://js.tosspayments.com/v1/payment"></script>
 </head>
 
 <body>
 
-    <!-- Start Header Area -->
-    <div th:replace="fragments/header :: header"/>
-    <!-- End Header Area -->
+<!-- Start Header Area -->
+<div th:replace="fragments/header :: header"/>
+<!-- End Header Area -->
 
-    <!-- Start Breadcrumbs -->
-    <div class="breadcrumbs">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6 col-md-6 col-12">
-                    <div class="breadcrumbs-content">
-                        <h1 class="page-title">현재 잔여포인트</h1>
-                    </div>
+<!-- Start Breadcrumbs -->
+<div class="breadcrumbs">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-6 col-md-6 col-12">
+                <div class="breadcrumbs-content">
+                    <h1 class="page-title">현재 잔여포인트</h1>
                 </div>
             </div>
         </div>
     </div>
-    <!-- End Breadcrumbs -->
+</div>
+<!-- End Breadcrumbs -->
 
-    <!-- Start Contact Area -->
-    <section id="contact-us" class="contact-us section">
-        <div class="container">
-            <div class="contact-head wow fadeInUp" data-wow-delay=".4s">
+<!-- Start Contact Area -->
+<section id="contact-us" class="contact-us section">
+    <div class="container">
+        <div class="contact-head wow fadeInUp" data-wow-delay=".4s">
+            <div class="">
                 <div class="">
-                    <div class="">
-                        <div class="single-head t-center">
+                    <div class="single-head t-center">
 
-                            <div class="contant-inner-title">
-                                <h2>현재 잔여포인트 확인</h2>
-                                <span>현재 잔여포인트: 998,000 </span><br>
-                                <span>모집에 필요한 포인트: 1,000,000</span>
-                            </div>
-
-                            <p>앗! 포인트 충전이 필요합니다!</p>
-                            
+                        <div class="contant-inner-title">
+                            <h2>참여 정보</h2>
+                            <span id="orderId">OrderNumber: POST-C-20220131-1</span><br>
+                            <span id="orderName">참여게시물 타이틀: 비트 5톤 모집합니다</span><br>
+                            <span id="customerName">참여자: 멋채럼</span>
                         </div>
 
-                        <div class="d-grid gap-2 m-t-20">
-                            <button class="btn btn-warning size-h-65 payment-btn" type="button">포인트 충전 바로가기</button>
+                        <div class="contant-inner-title">
+                            <h2>현재 잔여포인트 확인</h2>
+                            <span>현재 잔여포인트: 998,000 </span><br>
+                            <span id="amount">부족한 포인트: 1,000,000</span>
                         </div>
+                        <p>앗! 포인트 충전이 필요합니다!</p>
+
+                    </div>
+
+                    <div class="d-grid gap-2 m-t-20">
+                        <button id="payment_card_button" class="btn btn-warning size-h-65 payment-btn" type="button">포인트
+                            충전 바로가기
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
-    </section>
-    <!--/ End Contact Area -->
+</section>
+<!--/ End Contact Area -->
 
-    <!-- Start Footer Area -->
-    <div th:replace="fragments/footer :: footer"/>
-    <!--/ End Footer Area -->
+<!-- Start Footer Area -->
+<div th:replace="fragments/footer :: footer"/>
+<!--/ End Footer Area -->
 
-    <!-- ========================= scroll-top ========================= -->
-    <a href="#" class="scroll-top btn-hover">
-        <i class="lni lni-chevron-up"></i>
-    </a>
+<!-- ========================= scroll-top ========================= -->
+<a href="#" class="scroll-top btn-hover">
+    <i class="lni lni-chevron-up"></i>
+</a>
 
-    <!-- ========================= JS here ========================= -->
-    <script th:src="@{/awesome/js/bootstrap.min.js}"></script>
-    <script th:src="@{/awesome/js/wow.min.js}"></script>
-    <script th:src="@{/awesome/js/tiny-slider.js}"></script>
-    <script th:src="@{/awesome/js/glightbox.min.js}"></script>
-    <script th:src="@{/awesome/js/main.js}"></script>
+<!-- ========================= JS here ========================= -->
+<script th:src="@{/awesome/js/bootstrap.min.js}"></script>
+<script th:src="@{/awesome/js/wow.min.js}"></script>
+<script th:src="@{/awesome/js/tiny-slider.js}"></script>
+<script th:src="@{/awesome/js/glightbox.min.js}"></script>
+<script th:src="@{/awesome/js/main.js}"></script>
 </body>
+
+<script type="text/javascript" th:inline="javascript">
+    var clientKey = 'test_ck_D5GePWvyJnrK0W0k6q8gLzN97Eoq';
+    var tossPayments = TossPayments(clientKey); // 클라이언트 키로 초기화하기
+    var button = document.getElementById('payment_card_button');
+    button.addEventListener('click', function () {
+        tossPayments.requestPayment('카드', {
+            amount: 15000,
+            orderId: '1zQ0uRc4k2MKgWUJq4iF1',
+            orderName: '비트 1톤 모집합니다',
+            customerName: '멋채럼',
+            successUrl: 'http://localhost:8080/api/v1/payment/success',
+            failUrl: 'http://localhost:8080/api/v1/payment/fail',
+        })
+                .catch(function (error) {
+                if (error.code === 'USER_CANCEL') {
+                    // 결제 고객이 결제창을 닫았을 때 에러 처리
+                } else if (error.code === 'INVALID_CARD_COMPANY') {
+                    // 유효하지 않은 카드 코드에 대한 에러 처리
+                }
+            })
+
+    });
+</script>
 
 </html>
