--- a/src/main/resources/templates/market/company-gather-write-payment.html
+++ b/src/main/resources/templates/market/company-gather-write-payment.html
@@ -59,17 +59,30 @@
 
                         <div class="contant-inner-title">
                             <h2>참여 정보</h2>
-                            <span id="orderId">OrderNumber: POST-C-20220131-1</span><br>
-                            <span id="orderName">참여게시물 타이틀: 비트 5톤 모집합니다</span><br>
-                            <span id="customerName">참여자: 멋채럼</span>
+                            <span>
+                                <span>OrderNumber:</span>
+                                <span id="orderId">POST-C-20220131-1</span>
+                            </span><br>
+                            <span>
+                                <span>참여게시물 타이틀:</span>
+                                <span id="orderName">비트 5톤 모집합니다</span>
+                            </span><br>
+                            <span>
+                                <span>참여자:</span>
+                                <span id="customerName">멋채럼</span>
+                            </span>
                         </div>
 
                         <div class="contant-inner-title">
                             <h2>현재 잔여포인트 확인</h2>
-                            <span>현재 잔여포인트: 998,000 </span><br>
-                            <span id="amount">부족한 포인트: 1,000,000</span>
+                            <span>현재 잔여포인트:</span>
+                            <span id="total-amount">998,000 </span><br>
+
+                            <span>부족한 포인트:</span>
+                            <span id="amount">1,000,000</span>
                         </div>
-                        <p>앗! 포인트 충전이 필요합니다!</p>
+
+                        <p th:if="${amount != null}">앗! 포인트 충전이 필요합니다!</p>
 
                     </div>
 
@@ -103,25 +116,30 @@
 
 <script type="text/javascript" th:inline="javascript">
     var clientKey = 'test_ck_D5GePWvyJnrK0W0k6q8gLzN97Eoq';
-    var tossPayments = TossPayments(clientKey); // 클라이언트 키로 초기화하기
+    var tossPayments = TossPayments(clientKey);
+
     var button = document.getElementById('payment_card_button');
+    var orderId = document.getElementById('orderId');
+    var orderName = document.getElementById('orderName');
+    var customerName = document.getElementById('customerName');
+    var amount = document.getElementById('amount');
+
     button.addEventListener('click', function () {
-        tossPayments.requestPayment('카드', {
-            amount: 15000,
-            orderId: '1zQ0uRc4k2MKgWUJq4iF1',
-            orderName: '비트 1톤 모집합니다',
-            customerName: '멋채럼',
-            successUrl: 'http://localhost:8080/api/v1/payment/success',
-            failUrl: 'http://localhost:8080/api/v1/payment/fail',
+        tossPayments.requestPayment('카드', { // 결제 수단 파라미터
+            amount: amount,
+            orderId: orderId,
+            orderName: orderName,
+            customerName: customerName,
+            successUrl: 'http://localhost:8080/success',
+            failUrl: 'http://localhost:8080/fail',
         })
-                .catch(function (error) {
+            .catch(function (error) {
                 if (error.code === 'USER_CANCEL') {
                     // 결제 고객이 결제창을 닫았을 때 에러 처리
                 } else if (error.code === 'INVALID_CARD_COMPANY') {
                     // 유효하지 않은 카드 코드에 대한 에러 처리
                 }
             })
-
     });
 </script>
 
