--- a/src/main/resources/templates/market/company-gather-write-payment.html
+++ b/src/main/resources/templates/market/company-gather-write-payment.html
@@ -122,9 +122,9 @@
     button.addEventListener('click', function () {
         tossPayments.requestPayment('카드', { // 결제 수단 파라미터
             amount: 15000,
-            orderId: 'POST-F-ORDER-2023-02-02-42ca49bb-c1a9-4e83-8393-0a556d0b6ff1',
-            orderName: '비트 5톤 모집합니다',
-            customerName: '장서윤',
+            orderId: 'POST-C-ORDER-2023-02-03-e930f2f0-b698-444c-ac9b-f3feb1f3bce8',
+            orderName: '사과 2톤 모집합니다',
+            customerName: '한건주',
             successUrl: 'http://localhost:8080/success',
             failUrl: 'http://localhost:8080/fail',
         })
