design: 결제 view 마이페이지, 포인트
- 마이페이지 모집글 보증금 대기중인 게시글
- 결제금액 & 포인트 확인 페이지 타임리프 데이터 바인딩
- html 파일명, 패키지 변경

#101

--- a/src/main/resources/templates/point/point-check-payment.html
+++ b/src/main/resources/templates/point/point-check-payment.html
@@ -88,7 +88,8 @@
                         <button th:if="${paymentOrderPointResponse.depositAvailableStatus.toString().equals('DEPOSIT_NOT_AVAILABLE')}" id="payment_card_button" class="btn btn-warning size-h-65 payment-btn" type="button">
                             포인트 충전 바로가기
                         </button>
-                        <button th:if="${paymentOrderPointResponse.depositAvailableStatus.toString().equals('DEPOSIT_AVAILABLE')}" id="payment_deposit_button" class="btn btn-warning size-h-65 payment-btn" type="button">
+                        <button th:if="${paymentOrderPointResponse.depositAvailableStatus.toString().equals('DEPOSIT_AVAILABLE')}"
+                                id="payment_deposit_button" class="btn btn-warning size-h-65 payment-btn" type="button" formaction="">
                             보증금 예치 바로가기
                         </button>
                     </div>
