--- a/src/main/resources/templates/admin/admin-payment.html
+++ b/src/main/resources/templates/admin/admin-payment.html
@@ -73,7 +73,7 @@
                             </span><br>
                             <span>
                                 <span>이체금액:</span>
-                                <span id="transferAmount">15000</span>
+                                <span id="transferAmount">8200</span>
                             </span>
                         </div>
 
@@ -81,11 +81,11 @@
                             <h2>Payment Order 정보</h2>
                             <span>
                                 <span>이체 금액:</span>
-                                <span id="amount">15000</span>
+                                <span id="amount">8200</span>
                             </span><br>
                             <span>
                                 <span>UserOrderNumber:</span>
-                                <span id="orderId">ADMIN-sldkfjsdf-2022-02-05</span>
+                                <span id="orderId">ADMIN-TRANSFER-2023-02-06-cc0231f9-66e9-4273-a28d-2848dc744a02</span>
                             </span><br>
                             <span>
                                 <span>이체 내역:</span>
@@ -96,10 +96,11 @@
 
                     <div class="d-grid gap-2 m-t-20">
                         <p class="t-center">[멋쟁이채소처럼]은 위 정산 대상 내역을 확인했습니다.</p>
-                        <button id="payment_transfer_button" class="btn btn-warning size-h-65 payment-btn" type="button">
+                        <button id="payment_transfer_button" class="btn btn-warning size-h-65 payment-btn" type="submit">
                             계좌이체 정산 진행
                         </button>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -124,14 +125,17 @@
     var clientKey = 'test_ck_D5GePWvyJnrK0W0k6q8gLzN97Eoq';
     var tossPayments = TossPayments(clientKey);
     var button = document.getElementById('payment_transfer_button');
+    let amount = document.getElementById('amount').innerText;
+    let orderId = document.getElementById('orderId').innerText;
+    let orderName = document.getElementById('orderName').innerText;
 
     button.addEventListener('click', function () {
         tossPayments.requestPayment('계좌이체', { // 결제 수단 파라미터
-            amount: 15000,
-            orderId: 'B-gR4_6rO5SzB7YC3wys1234',
-            orderName: '토스 티셔츠 외 2건',
-            successUrl: 'http://localhost:8080/success',
-            failUrl: 'http://localhost:8080/fail',
+            amount: amount,
+            orderId: orderId,
+            orderName: orderName,
+            successUrl: 'http://localhost:8080/api/v1/admin/success',
+            failUrl: 'http://localhost:8080/api/v1/admin/fail',
         })
             .catch(function (error) {
                 if (error.code === 'USER_CANCEL') {
