--- a/src/main/resources/templates/admin/admin-transfer-pending-list.html
+++ b/src/main/resources/templates/admin/admin-transfer-pending-list.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html xmlns:th = "http://www.thymeleaf.org" class="no-js" lang="ko">
+<html xmlns:th="http://www.thymeleaf.org" class="no-js" lang="ko">
 
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Bookmarked - ClassiGrids Classified Ads and Listing Website Template</title>
+    <title>관리자 정산 대기</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/x-icon" th:href="@{/awesome/images/favicon.svg}"/>
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{assets/images/favicon.svg}"/>
     <!-- Place favicon.ico in the root directory -->
 
     <!-- Web Font -->
@@ -18,19 +18,18 @@
     <link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css}">
 
     <!-- ========================= CSS here ========================= -->
-    <link th:href ="@{/awesome/css/bootstrap.min.css}" rel="stylesheet" type="text/css">
-    <link th:href ="@{/awesome/css/LineIcons.2.0.css}" rel="stylesheet" type="text/css">
-    <link th:href ="@{/awesome/css/animate.css}" rel="stylesheet" type="text/css">
-    <link th:href ="@{/awesome/css/tiny-slider.css}" rel="stylesheet" type="text/css">
-    <link th:href ="@{/awesome/css/glightbox.min.css}" rel="stylesheet" type="text/css">
-    <link th:href ="@{/awesome/css/main.css}" rel="stylesheet" type="text/css">
-    <link th:href ="@{/awesome/css/mypage-deposit-pending.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/awesome/css/bootstrap.min.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/awesome/css/LineIcons.2.0.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/awesome/css/animate.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/awesome/css/tiny-slider.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/awesome/css/glightbox.min.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/awesome/css/main.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/awesome/css/mypage-deposit-pending.css}" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-
     <!-- Start Header Area -->
-    <div th:replace="fragments/header :: header" />
+    <div th:replace="fragments/header :: header"/>
     <!-- End Header Area -->
 
     <!-- Start Breadcrumbs -->
@@ -39,7 +38,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 col-md-6 col-12">
                     <div class="breadcrumbs-content">
-                        <h1 class="page-title">대기중인 모집 작성글 내역</h1>
+                        <h1 class="page-title">정산 대기</h1>
                     </div>
                 </div>
             </div>
@@ -56,8 +55,8 @@
                     <div class="dashboard-sidebar">
                         <div class="user-image">
                             <img src="https://via.placeholder.com/300x300" alt="#">
-                            <h3>I5E2(검증된 기업)
-                                <span><a href="javascript:void(0)">기업회원</a></span>
+                            <h3>I5E2
+                                <span><a href="javascript:void(0)">관리자</a></span>
                             </h3>
                         </div>
                         <div class="dashboard-menu">
@@ -66,14 +65,9 @@
                                         I5E2</a></li>
                                 <li><a href="profile-settings.html"><i class="lni lni-pencil-alt"></i>회원정보수정</a></li>
                                 <li><a href="my-items.html"><i class="lni lni-bolt-alt"></i>포인트</a></li>
-                                <li><a href="favourite-items.html"><i class="bi bi-box"></i>모집 내역</a></li>
-                                <li><a href="favourite-items.html"><i class="bi bi-box"></i>응찰 내역</a></li>
-                                <li><a class="active" href="favourite-items.html"><i class="bi bi-clock-history"></i>대기중인 내역</a></li>
-                                <li><a href="favourite-items.html"><i class="lni lni-heart"></i>관심 목록</a></li>
-                                <li><a href="favourite-items.html"><i class="bi bi-bell"></i>알림</a></li>
-                            <div class="button">
-                                <a class="btn" href="javascript:void(0)">정회원 신청</a>
-                            </div>
+                                <li><a href="favourite-items.html"><i class="bi bi-box"></i>모집 대기</a></li>
+                                <li><a href="favourite-items.html"><i class="bi bi-box"></i>응찰 대기</a></li>
+                                <li><a class="active" href="favourite-items.html"><i class="bi bi-clock-history"></i>정산 대기</a></li>
                         </div>
                     </div>
                     <!-- Start Dashboard Sidebar -->
@@ -81,23 +75,26 @@
                 <div class="col-lg-9 col-md-12 col-12">
                     <div class="main-content">
                         <div class="dashboard-block mt-0">
-                            <h3 class="block-title">대기중인 내역</h3>
+                            <h3 class="block-title">정산 대기중인 내역</h3>
                             <!-- Start Items Area -->
                             <div class="my-items">
                                 <!-- Start List Title -->
                                 <div class="item-list-title">
                                     <div class="row align-items-center">
-                                        <div class="col-lg-5 col-md-5 col-12">
-                                            <p>대기중인 모집글</p>
+                                        <div class="col-lg-3 col-md-3 col-18">
+                                            <p>정산 대기 Post</p>
                                         </div>
-                                        <div class="col-lg-3 col-md-3 col-12">
-                                            <p>글 작성일</p>
+                                        <div class="col-lg-3 col-md-3 col-18">
+                                            <p>계약 체결 완료일</p>
                                         </div>
-                                        <div class="col-lg-2 col-md-2 col-12">
-                                            <p>게시글 노출 여부</p>
+                                        <div class="col-lg-2 col-md-2 col-18">
+                                            <p>정산 받는 사람</p>
                                         </div>
-                                        <div class="col-lg-2 col-md-2 col-12">
-                                            <p>보증금 예치</p>
+                                        <div class="col-lg-2 col-md-2 col-18">
+                                            <p>정산 금액 / 수수료</p>
+                                        </div>
+                                        <div class="col-lg-2 col-md-2 col-18">
+                                            <p>Active</p>
                                         </div>
                                     </div>
                                 </div>
@@ -105,7 +102,7 @@
                                 <!-- Start Single List -->
                                 <div class="single-item-list">
                                     <div class="row align-items-center">
-                                        <div class="col-lg-5 col-md-5 col-12">
+                                        <div class="col-lg-3 col-md-3 col-18">
                                             <div class="item-image">
                                                 <div class="content">
                                                     <h3 class="title"><a href="javascript:void(0)">비트즙용 5t 팝니다</a></h3>
@@ -113,21 +110,26 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-3 col-md-3 col-12">
+                                        <div class="col-lg-3 col-md-3 col-18">
                                             <p>2022-01-24-16:00</p>
                                         </div>
-                                        <div class="col-lg-2 col-md-2 col-12">
-                                            <p>대기중</p>
+                                        <div class="col-lg-2 col-md-2 col-18">
+                                            <p>한건주</p>
                                         </div>
-                                        <div class="col-lg-2 col-md-2 col-12">
-                                            <form action="/api/v1/payment/point-info" method="post">
-                                                <input type="hidden" id="userId" name="userId" value="1">
-                                                <input type="hidden" id="postTitle" name="postTitle" value="착즙용 사과 1톤 모집합니다">
-                                                <input type="hidden" id="paymentOrderPostId" name="paymentOrderPostId" value="1">
-                                                <input type="hidden" id="paymentOrderAmount" name="paymentOrderAmount" value="35000">
-                                                <input type="hidden" id="pointTotalBalance" name="pointTotalBalance" value="45000">
-                                                <input type="hidden" id="requestDepositAmount" name="requestDepositAmount" value="35000">
-                                                <button type="submit" class="btn btn-primary btn-deposit">Active</button>
+                                        <div class="col-lg-2 col-md-2 col-18">
+                                            <p>12300</p>
+                                            <p>2700</p>
+                                        </div>
+                                        <div class="col-lg-2 col-md-2 col-18">
+                                            <form action="/admin/transfer" method="post">
+                                                <input type="hidden" name="transferUserName" value="장서윤">
+                                                <input type="hidden" name="accountNumber" value="60440203-012-2343235">
+                                                <input type="hidden" name="bankName" value="국민">
+                                                <input type="hidden" name="transferAmount" value="15000">
+                                                <input type="hidden" name="amount" value="15000">
+                                                <input type="hidden" name="orderId" value="ADMIN-sldkfjsdf-2022-02-05">
+                                                <input type="hidden" name="orderName" value="FINAL-CONTRACT-PAYMENT">
+                                                <button type="submit" class="btn btn-primary btn-transfer">Transfer</button>
                                             </form>
                                         </div>
                                     </div>
@@ -136,22 +138,26 @@
                                 <!-- Start Single List -->
                                 <div class="single-item-list">
                                     <div class="row align-items-center">
-                                        <div class="col-lg-5 col-md-5 col-12">
+                                        <div class="col-lg-3 col-md-3 col-18">
                                             <div class="item-image">
                                                 <div class="content">
-                                                    <h3 class="title"><a href="javascript:void(0)">겨울비트 작은 반점있는 즙용 50t</a></h3>
-                                                    <span class="price">GATHER-20220124-3</span>
+                                                    <h3 class="title"><a href="javascript:void(0)">비트즙용 5t 팝니다</a></h3>
+                                                    <span class="price">GATHER-20220124-5</span>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-3 col-md-3 col-12">
-                                            <p>2022-01-23-16:00</p>
+                                        <div class="col-lg-3 col-md-3 col-18">
+                                            <p>2022-01-24-16:00</p>
                                         </div>
-                                        <div class="col-lg-2 col-md-2 col-12">
-                                            <p>대기중</p>
+                                        <div class="col-lg-2 col-md-2 col-18">
+                                            <p>한건주</p>
                                         </div>
-                                        <div class="col-lg-2 col-md-2 col-12">
-                                            <button type="button" class="btn btn-primary btn-deposit">Active</button>
+                                        <div class="col-lg-2 col-md-2 col-18">
+                                            <p>12300</p>
+                                            <p>2700</p>
+                                        </div>
+                                        <div class="col-lg-2 col-md-2 col-18">
+                                                <button type="button" class="btn btn-primary btn-transfer">Transfer</button>
                                         </div>
                                     </div>
                                 </div>
@@ -159,22 +165,26 @@
                                 <!-- Start Single List -->
                                 <div class="single-item-list">
                                     <div class="row align-items-center">
-                                        <div class="col-lg-5 col-md-5 col-12">
+                                        <div class="col-lg-3 col-md-3 col-18">
                                             <div class="item-image">
                                                 <div class="content">
-                                                    <h3 class="title"><a href="javascript:void(0)">사과즙용 100박스</a></h3>
-                                                    <span class="price">GATHER-20220124-2</span>
+                                                    <h3 class="title"><a href="javascript:void(0)">비트즙용 5t 팝니다</a></h3>
+                                                    <span class="price">GATHER-20220124-5</span>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-3 col-md-3 col-12">
-                                            <p>2022-01-22-16:00</p>
+                                        <div class="col-lg-3 col-md-3 col-18">
+                                            <p>2022-01-24-16:00</p>
                                         </div>
-                                        <div class="col-lg-2 col-md-2 col-12">
-                                            <p>대기중</p>
+                                        <div class="col-lg-2 col-md-2 col-18">
+                                            <p>한건주</p>
                                         </div>
-                                        <div class="col-lg-2 col-md-2 col-12">
-                                            <button type="button" class="btn btn-primary btn-deposit">Active</button>
+                                        <div class="col-lg-2 col-md-2 col-18">
+                                            <p>12300</p>
+                                            <p>2700</p>
+                                        </div>
+                                        <div class="col-lg-2 col-md-2 col-18">
+                                                <button type="button" class="btn btn-primary btn-transfer">Transfer</button>
                                         </div>
                                     </div>
                                 </div>
@@ -182,22 +192,26 @@
                                 <!-- Start Single List -->
                                 <div class="single-item-list">
                                     <div class="row align-items-center">
-                                        <div class="col-lg-5 col-md-5 col-12">
+                                        <div class="col-lg-3 col-md-3 col-18">
                                             <div class="item-image">
                                                 <div class="content">
-                                                    <h3 class="title"><a href="javascript:void(0)">두백감자 알감자 사이즈</a></h3>
-                                                    <span class="price">GATHER-20220124-1</span>
+                                                    <h3 class="title"><a href="javascript:void(0)">비트즙용 5t 팝니다</a></h3>
+                                                    <span class="price">GATHER-20220124-5</span>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-3 col-md-3 col-12">
-                                            <p>2022-01-20-16:00</p>
+                                        <div class="col-lg-3 col-md-3 col-18">
+                                            <p>2022-01-24-16:00</p>
                                         </div>
-                                        <div class="col-lg-2 col-md-2 col-12">
-                                            <p>대기중</p>
+                                        <div class="col-lg-2 col-md-2 col-18">
+                                            <p>한건주</p>
                                         </div>
-                                        <div class="col-lg-2 col-md-2 col-12">
-                                            <button type="button" class="btn btn-secondary btn-deposit">Active</button>
+                                        <div class="col-lg-2 col-md-2 col-18">
+                                            <p>12300</p>
+                                            <p>2700</p>
+                                        </div>
+                                        <div class="col-lg-2 col-md-2 col-18">
+                                                <button type="button" class="btn btn-primary btn-transfer">Transfer</button>
                                         </div>
                                     </div>
                                 </div>
