refactor: 사용자) 보증금 접수 요청, 결제 요청, 사용자 포인트 관리 / 관리자 보증금 정산 요청, 사용자 포인트 테이블 업데이트)
- deposit 패키지 생성
- 사용자 포인트가 없는 경우 총 포인트, 보증금 0원으로 등록
- 관리자 deposit 정산 요구시 사용자 총 포인트, 보증금 총액에서 차감 업데이트

#113

--- a/src/main/resources/templates/admin/admin-payment.html
+++ b/src/main/resources/templates/admin/admin-payment.html
@@ -62,6 +62,7 @@
                             <span>
                                 <span>받는 분:</span>
                                 <span id="transferUserName">장서윤</span>
+                                <span id="targetUserId">1</span>
                             </span><br>
                             <span>
                                 <span>입금계좌:</span>
@@ -72,8 +73,8 @@
                                 <span id="bankName">국민</span>
                             </span><br>
                             <span>
-                                <span>이체금액:</span>
-                                <span id="transferAmount">8200</span>
+                                <span>보증금 총 금액(수수료 차감전):</span>
+                                <span id="depositAmount">35000</span>
                             </span>
                         </div>
 
@@ -81,11 +82,11 @@
                             <h2>Payment Order 정보</h2>
                             <span>
                                 <span>이체 금액:</span>
-                                <span id="amount">8200</span>
+                                <span id="amount">28700</span>
                             </span><br>
                             <span>
                                 <span>UserOrderNumber:</span>
-                                <span id="orderId">ADMIN-TRANSFER-2023-02-06-cc0231f9-66e9-4273-a28d-2848dc744a02</span>
+                                <span id="orderId">ADMIN-TRANSFER-2023-02-07-a4c5581b-4c11-484f-9ba7-799bcff44490</span>
                             </span><br>
                             <span>
                                 <span>이체 내역:</span>
