fefactor: auction 이미지 s3업로드
-buying 구현완료(주석처리)

-PostPointActivateEnum 수정

# 31

--- a/src/main/resources/templates/farmer/farmer-gather-writeform.html
+++ b/src/main/resources/templates/farmer/farmer-gather-writeform.html
@@ -217,7 +217,7 @@
 
                                                     <div class="dropzone"></div>
 
-                                                    <!-- 포스팅 - 이미지/동영상 dropzone 영역 -->
+                                                    <!-- 포스팅 - 이미지/동영상 farmdropzone 영역 -->
                                                     <ul class="list-unstyled mb-0" id="dropzone-preview">
                                                         <li class="mt-2" id="dropzone-preview-list">
                                                             <!-- This is used as the file preview template -->
@@ -283,7 +283,7 @@
 <script th:src="@{/awesome/js/glightbox.min.js}"></script>
 <script th:src="@{/awesome/js/main.js}"></script>
 
-<script th:src="@{/awesome/js/dropzone.js}"></script>
+<script th:src="@{/awesome/js/farmdropzone.js}"></script>
 </body>
 
 </html>
