--- a/src/main/resources/templates/company/company-gather-writeform.html
+++ b/src/main/resources/templates/company/company-gather-writeform.html
@@ -211,45 +211,45 @@
                                                         </div>
                                                     </div>
 
-                                                        <div class="dropzone"></div>
+<!--                                                        <div class="dropzone"></div>-->
 
-                                                        <!-- 포스팅 - 이미지/동영상 dropzone 영역 -->
-                                                        <ul class="list-unstyled mb-0" id="dropzone-preview">
-                                                            <li class="mt-2" id="dropzone-preview-list">
-                                                                <!-- This is used as the file preview template -->
-                                                                <div class="border rounded-3">
-                                                                    <div class="d-flex align-items-center p-2">
-                                                                        <div class="flex-shrink-0 me-3">
-                                                                            <div class="width-8 h-auto rounded-3">
-                                                                                <img data-dz-thumbnail="data-dz-thumbnail" class="w-full h-auto rounded-3 block" src="#" alt="Dropzone-Image" style="width: 120px;"/>
-                                                                            </div>
-                                                                        </div>
-                                                                        <div class="flex-grow-1">
-                                                                            <div class="pt-1">
-                                                                                <h6 class="font-semibold mb-1" data-dz-name="data-dz-name">&nbsp;</h6>
-                                                                                <p class="text-sm text-muted fw-normal" data-dz-size="data-dz-size"></p>
-                                                                                <strong class="error text-danger" data-dz-errormessage="data-dz-errormessage"></strong>
-                                                                            </div>
-                                                                        </div>
-                                                                        <div class="shrink-0 ms-3">
-                                                                            <button data-dz-remove="data-dz-remove" class="btn btn-sm btn-danger">Delete</button>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                            </li>
-                                                        </ul>
-                                                                                                                <!-- end editor -->
+<!--                                                        &lt;!&ndash; 포스팅 - 이미지/동영상 farmdropzone 영역 &ndash;&gt;-->
+<!--                                                        <ul class="list-unstyled mb-0" id="dropzone-preview">-->
+<!--                                                            <li class="mt-2" id="dropzone-preview-list">-->
+<!--                                                                &lt;!&ndash; This is used as the file preview template &ndash;&gt;-->
+<!--                                                                <div class="border rounded-3"  >-->
+<!--                                                                    <div class="d-flex align-items-center p-2">-->
+<!--                                                                        <div class="flex-shrink-0 me-3">-->
+<!--                                                                            <div class="width-8 h-auto rounded-3">-->
+<!--                                                                                <img data-dz-thumbnail="data-dz-thumbnail" class="w-full h-auto rounded-3 block" src="#" alt="Dropzone-Image"  style="width: 120px;"/>-->
+<!--                                                                            </div>-->
+<!--                                                                        </div>-->
+<!--                                                                        <div class="flex-grow-1">-->
+<!--                                                                            <div class="pt-1">-->
+<!--                                                                                <h6 class="font-semibold mb-1" data-dz-name="data-dz-name">&nbsp;</h6>-->
+<!--                                                                                <p class="text-sm text-muted fw-normal" data-dz-size="data-dz-size"></p>-->
+<!--                                                                                <strong class="error text-danger" data-dz-errormessage="data-dz-errormessage"></strong>-->
+<!--                                                                            </div>-->
+<!--                                                                        </div>-->
+<!--                                                                        <div class="shrink-0 ms-3">-->
+<!--                                                                            <button data-dz-remove="data-dz-remove" class="btn btn-sm btn-danger">Delete</button>-->
+<!--                                                                        </div>-->
+<!--                                                                    </div>-->
+<!--                                                                </div>-->
+<!--                                                            </li>-->
+<!--                                                        </ul>-->
+<!--                                                                                                                &lt;!&ndash; end editor &ndash;&gt;-->
 
-                                                        <div class="col-12" style="margin-top: 20px">
-                                                            <div class="form-group">
-                                                                <label class="tag-label">태그* <span>Comma(,)로 구분해 주세요</span></label>
-                                                                <input th:field="*{tag}" type="text"
-                                                                       placeholder="태그를 작성해주세요" th:class="${#fields.hasErrors('tag')}? 'error'">
-                                                                <div th:each="msg : ${#fields.errors('tag')}">
-                                                                    <p style="color: red" th:text="${msg}"></p>
-                                                                </div>
-                                                            </div>
-                                                        </div>
+<!--                                                        <div class="col-12" style="margin-top: 20px">-->
+<!--                                                            <div class="form-group">-->
+<!--                                                                <label class="tag-label">태그* <span>Comma(,)로 구분해 주세요</span></label>-->
+<!--                                                                <input th:field="*{tag}" type="text"-->
+<!--                                                                       placeholder="태그를 작성해주세요" th:class="${#fields.hasErrors('tag')}? 'error'">-->
+<!--                                                                <div th:each="msg : ${#fields.errors('tag')}">-->
+<!--                                                                    <p style="color: red" th:text="${msg}"></p>-->
+<!--                                                                </div>-->
+<!--                                                            </div>-->
+<!--                                                        </div>-->
                                                         <hr>
 
                                                         <!-- Start Post Ad Step Three Content -->
@@ -307,7 +307,7 @@
 
                                                         <div class="col-12">
                                                             <div class="form-group button mb-0">
-                                                                <button type="submit" class="btn ">작성 완료</button>
+                                                                <button type="submit" class="btn" id="sub-btn">작성 완료</button>
                                                             </div>
                                                         </div>
 
@@ -345,7 +345,7 @@
     <script th:src="@{/awesome/js/glightbox.min.js}"></script>
     <script th:src="@{/awesome/js/main.js}"></script>
 
-    <script th:src="@{/awesome/js/dropzone.js}"></script>
+    <script th:src="@{/awesome/js/companydropzone.js}"></script>
 
 
 
