--- a/src/main/resources/templates/company/smart.html
+++ b/src/main/resources/templates/company/smart.html
@@ -1,27 +1,32 @@
-<html>
-<!-- 내용 -->
-<textarea rows="20" name="form-control" id="form-control"></textarea>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+<!--enctype="multipart/form-data"-->
+<form action="/market/img" method="post" enctype="multipart/form-data">
+    <h4>단일 파일 업로드</h4>
+    <input type="file" name="file">
 
-<!-- SmartEditor2 텍스트편집기 -->
+    <input type="submit"/>
+</form>
 
+
+<form action="/market/img" method="post" enctype="multipart/form-data">
+    <h4>다중 파일 업로드</h4>
+    <input type="file" multiple="multiple" name="file">
+
+    <input type="submit"/>
+</form>
+
+
+</body>
 </html>
 
-<script src="/awesome/js/smarteditor2/js/HuskyEZCreator.js" charset="utf-8"></script>
-<script>
-    $(document).ready(function () {
 
-        <!-- SmartEditor2 텍스트편집기 -->
-        var oEditors = [];
-        function smartEditorIFrame() {
-
-            nhn.husky.EZCreator.createInIFrame({
-                oAppRef : oEditors,
-                elPlaceHolder : "form-control",
-                sSkinURI : "/awesome/js/smarteditor2/SmartEditor2Skin.html",
-                fCreator : "createSEditor2"
-            });
-        }
-        smartEditorIFrame();
-    });
-</script>
 
